--- a/src/MessagePack.csproj
+++ b/src/MessagePack.csproj
@@ -8,10 +8,10 @@
     <Authors>Whitestone</Authors>
     <Product>Whitestone Cambion</Product>
     <Description>MessagePack serializer for Whitestone Cambion</Description>
-    <Copyright>Copyright © 2025</Copyright>
+    <Copyright>Copyright (c) Whitestone</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://cambion.whitestone.no/</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/whitestone-no/Cambion.Serializer.MessagePack</RepositoryUrl>
+    <RepositoryUrl>https://github.com/whitestone-no/Cambion-Serializer-MessagePack</RepositoryUrl>
     <PackageIconUrl>https://cambion.whitestone.no/images/Cambion_Logo_128.png</PackageIconUrl>
     <PackageIcon>Cambion_Logo_128.png</PackageIcon>
     <PackageTags>messaging servicebus esb enterprice-service-bus cambion event-aggregator messagepack</PackageTags>
