--- a/src/MessagePack.csproj
+++ b/src/MessagePack.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="MessagePack" Version="3.1.3" />
-    <PackageReference Include="Whitestone.Cambion" Version="6.0.0-preview-15" />
+    <PackageReference Include="Whitestone.Cambion" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
